--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,12 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+nav ul a.active{
+   text-decoration: underline;
+}
+
+#dashboard nav a.active {
+   background-color: rgb(2, 2, 133);
+   color: white;
+}
